Fix misaligned home button

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     padding: 10px;
     border-radius: 2px;
     margin: 10px;
+    margin-left: 16px;
     width: fit-content;
     background-color: #292929;
 }
